TestCases/errors/illegalcharacter1.alan
source illegal_char
begin
this.that
his.her
: 
